syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Saga.Orchestrator.API.GrpcClient.Protos";

service IdentityGrpcService{
	rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
	rpc GetUsersByIds (GetUsersByIdRequest) returns (GetUsersByIdsResponse);
}

message GetUserByIdRequest{
	int32 Id = 1;
}

message GetUserByIdResponse{
    string Fullname = 1;
    string Country = 2;
	string Phone = 3;
    string Gender = 4;
	int32 Id = 5;
    google.protobuf.Timestamp BirthDate = 6;
}
message GetUsersByIdRequest{
	repeated int32 Ids  = 1;
}
message GetUsersByIdsResponse{
	repeated UserResponse Users = 1;
}
message UserResponse{
    string Fullname = 1;
    string Country = 2;
	string Phone = 3;
    string Gender = 4;
	int32 Id = 5;
    google.protobuf.Timestamp BirthDate = 6;
}